# NovaLuau

./: CMakeLists.txt  README.md  main.cpp
bindings/: python.cpp
core/: Environment.cpp  Environment.hpp  Executor.cpp  Executor.hpp  VM.cpp  VM.hpp  Value.hpp
core/core/: Value.cpp
libraries/: Base.cpp  Base.hpp  Debug.cpp  Debug.hpp
objects/: Function.cpp  Function.hpp  Table.cpp  Table.hpp
parser/: AST.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp
python/: novaluau.py
